--- a/kalkulator/main.css
+++ b/kalkulator/main.css
@@ -1,28 +1,39 @@
+body {
+    background-color: lightgray;
+}
+
 div.container {
     width: 400px;
-    margin: auto;
-    border: 2px solid black;
+    margin: 30px auto;
     background-color: lightgray;
+    box-shadow: -5px -5px 7px #ffffff73, 3px 3px 10px rgba(94, 104, 121, .288);
     padding-bottom: 10px;
+    border-radius: 30px;
 }
 
 .layar {
     width: 380px;
-    height: 70px;
+    height: 120px;
     margin: 8px auto;
     display: flex;
     flex-direction: column;
-
+    inset: 1;
+    border-radius: 30%;
 }
 
 #proses {
     flex: 1;
-    border: 1px solid black;
-    background-color: white;
-    font-size: 30px;
+    background-color: lightgray;
+    box-shadow: inset 10px 10px 12px rgba(94, 104, 121, .288), inset -10px -10px 10px #ffffff73;
+    font-size: 50px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     margin: 2px;
+    margin-top: 20px;
+    border-radius: 40px;
+    box-sizing: border-box;
+    padding: 10px 15px 10px 15px;
+    border: none;
 }
 
 .tombol {
@@ -38,20 +49,23 @@ div.container {
 
 .angka {
     display: flex;
-    width: 80px;
-    border: 2px solid black;
-    background-color: wheat;
+    width: 70px;
+    height: 70px;
+    background-color: lightgray;
+    box-shadow: -3px -3px 7px #ffffff73, 3px 3px 5px rgba(94, 104, 121, .288);
     cursor: pointer;
-    margin: 1px;
+    margin: 8px;
     justify-content: center;
     align-items: center;
     font-size: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
+    border-radius: 50%;
+
 }
 
 div#operasi.operator {
-    background-color: rgba(255, 160, 122, 0.61);
+    background-color: rgba(255, 160, 122, 0.3);
 
 }
 
@@ -70,5 +84,5 @@ div#operasi.operator {
 }
 
 .angka:hover {
-    background-color: rgb(219, 231, 235);
+    background-color: #ffffff73
 }
